fix(vieb) : change invisible tab color
the grey color is hard to distinguish with title url bar.

--- a/.vieb/colors/darkmode.css
+++ b/.vieb/colors/darkmode.css
@@ -22,7 +22,7 @@
     /* general */
     --bg: #333;
     --fg: #eee;
-    --tab-background: #444;
+    --tab-background: #4a545c;
     --tab-suspended: #000;
     --visible-tab: #1f3050;
     --tab-split: #f90;
